--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="btn blue" type="button" id="blue"></div>
     </div>
     
-
+<button>Start</button>
 
     <script src="app.js"></script>
 </body>
